Fixed background color of scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -174,11 +174,12 @@ input {
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  /* background: #f1f1f1; */
 }
 
 /* Handle */
